--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 
 
-<section id="menu" class="contact" >
+<section id="menu" class="menu" >
 
     <div class="heading">
        <span>Food Menu</span>
@@ -155,6 +155,63 @@
 
 </section>
 
+<section>
+
+<footer>
+    <div class="main">
+        <div class="col">
+            <h4>Our Service</h4>
+            <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+            <li><a href="#menu">Menu</a></li>
+            <li><a href="#service">Service</a></li>
+        </ul>
+        </div>
+
+        <div class="col">
+            <h4>Our Service</h4>
+            <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+            <li><a href="#menu">Menu</a></li>
+            <li><a href="#service">Service</a></li>
+        </ul>
+        </div>
+
+        <div class="col">
+            <h4>Our Service</h4>
+            <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+            <li><a href="#menu">Menu</a></li>
+            <li><a href="#service">Service</a></li>
+        </ul>
+        </div>
+
+        
+        <div class="col">
+            <h4>Our Service</h4>
+            <ul>
+            <li><a href="#home"><i class='bx bxs-cart-add'></i></a></li>
+            <li><a href="#about"><i class='bx bxs-cart-add'></i></a></li>
+            <li><a href="#contact"><i class='bx bxs-cart-add'></i></a></li>
+            <li><a href="#menu"><i class='bx bxs-cart-add'></i></a></li>
+            <li><a href="#service"><i class='bx bxs-cart-add'></i></a></li>
+        </ul>
+        </div>
+    </div>
+</footer>
+
+</section>
+
+
+</body>
+</html>
+
     <!-- <section id="about">
         <h1>about</h1>
 
@@ -174,5 +231,3 @@
 <h1>service</h1>
     </section> 
     <footer></footer>
-</body>
-</html>
