--- a/index.html
+++ b/index.html
@@ -33,14 +33,10 @@
         <div class="home-img">
             <img src="img/home.png" alt="">
         </div>
-
-
-
 </section>
 
 
      <section id="about" class="about">
-
          <div class="container">
             <div class="home-img">
                 <img src="img/about.png" alt="">
@@ -52,19 +48,15 @@
            <a href="" class="btn">Learn more</a>
         </div>
          </div>
-
-
-
  </section>
-
-
-
+    
 <section id="menu" class="menu" >
 
     <div class="heading">
        <span>Food Menu</span>
        <h2>Fresh taste and great price</h2>
     </div>
+<!--   The below takes each foood as a box   -->
 
     <div class="menu-container">
 
